# media-scribe

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  test_on_video.py
.github/: pull_request_template.md
.github/workflows/: pylint.yml
spec/: implementation_plan.md  phased-task.md
src/media_scribe/: __init__.py  cleaner.py  core.py  exceptions.py  extractor.py  logger.py  plugins.py  schemas.py  transcriber.py  utils.py
tests/: test_cleaner.py  test_extractor.py  test_plugins.py  test_schemas.py  test_transcriber.py  test_utils.py
