[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-scribe"
version = "0.1.0"
description = "Python library for processing large audio/video files with multi-language transcription and noise reduction"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Khalid Moin", email = "your-email@example.com"}]
license = {text = "MIT"}
keywords = ["media", "transcription", "audio", "video", "whisper", "mlx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ffmpeg-python",
    "pydantic>=2.0",
    "structlog",
    "noisereduce",
    "scipy",
    "soundfile",
    "requests",
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openai-whisper; sys_platform != 'darwin' or platform_machine != 'arm64'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
]

[project.urls]
Repository = "https://github.com/khalidit04/media-scribe"
Documentation = "https://github.com/khalidit04/media-scribe#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/media_scribe"]
